--- a/TODO.org
+++ b/TODO.org
@@ -18,6 +18,8 @@
   * Remove due date column from member page - instead show due date as part of issued column
   * Add description back in for invoices - perhaps called summary
   * Add evil icons (rails plugin, etc) or are we going to use pngs generated from AI file?
+    * Looks like they're making a pass to add more icons!  Could get full set of needed very soon.
+  * Replace total with Balance on invoice list
 
 * Beta (5-10 early adopters)
   * Make use of timezone
