--- a/TODO.org
+++ b/TODO.org
@@ -1,42 +1,30 @@
-* For Vince
-  * Production certs for dovetail.io and membrs.co
-
-* For Matt
-  * Screens
-  * Navigation Design - In Progress
-  * Marketing site changes
-  * Pre-Order?
-    
 * Questions
   
 * Alpha (Demoable/guided)
   * Space branding of main app - contentious
-  * Invoice details page (Coming).
-  * Member portal design changes (Coming?)
-  * Simplified integrations (inline them on integrations page)
-  * Consistency issues with forms (size, alignment, titles (if needed), post create/update redirects)
-  * Add description back in for invoices - perhaps called summary
-  * Add evil icons (rails plugin, etc) or are we going to use pngs generated from AI file?
-    * Looks like they're making a pass to add more icons!  Could get full set of needed very soon.
+  * Invoice details page (design coming...).
+  * Member portal design changes (design coming?)
 
 * Beta (5-10 early adopters)
-  * Add "due in" to issue date column on invoice list?
-  * Make use of timezone
+  * Add description back in for invoices - perhaps called summary
+  * Consistency issues with forms (post create/update redirects)
+  * Make use of timezone?
   * Scheduled invoices (subsciptions auto generate)
   * Scheduled payments (auto payment for subscriptions)
     * Email payment receipts - Mailer done, will call when doing subscription payments
     * Perhaps it should still send the email when adding any kind of payment?!?
-  * Improve display of errors on fields for devise forms.
   * Onboarding, take to new member invoice with plan and prefil invoice.
-  * Edit credit note links?  (But only for open)
-  * Delete invoice/credit note links (Same)
 
 * 2.0 (MVP, ship in January-february time frame, available to all, for money)
+  * Delete invoice links (Same)
+  * Improve display of errors on fields for devise forms.
+  * Add "due in" to issue date column on invoice list?
   * Space Branding for member portal
   * Change member password
   * Member password recovery
     * Can also/do instead password reset on admin site (would resend invite basically)
-
+  * Add evil icons (rails plugin, etc) or are we going to use pngs generated from AI file?
+    * Looks like they're making a pass to add more icons!  Could get full set of needed very soon.
 
 * 2.1
 
@@ -49,12 +37,6 @@
   * Add team support
 
   * Add Paid and Remaining columns to Member account history.
-  * Reference payments on invoice display
-  * Reference invoice on payments and credit notes
-  * Show pages for (Depends on design question/direction) - currently not linking to these:?
-    * Invoice
-    * Payment
-    * Credit note
 
   * Attendance tracking (check in, out)
   * Attendance tracking API (remote systems updating)
