--- a/TODO.org
+++ b/TODO.org
@@ -2,21 +2,19 @@
   
 * Alpha (Demoable/guided)
   * Space branding of main app - contentious
-  * Invoice details page (design coming...).
+  * Invoice details page.
   * Member portal design changes (design coming?)
 
 * Beta (5-10 early adopters)
-  * Onboarding, take to new member invoice with plan and prefil invoice.
-  * Plan switching: Setup fees, billing dates - punt, just create new invoice and let admin adjust as needed
-  * Add plan_id to invoicing_ledger_item: optional field for tracking plans/billing periods ie may be null
-  * Should be able to add credit notes and/or payments to draft invoices
   * Scheduled invoices (subsciptions auto generate)
-  * Scheduled payments (auto payment for subscriptions)
+    * Scheduled payments (auto payment for subscriptions)
     * Email payment receipts - Mailer done, will call when doing subscription payments
     * Perhaps it should still send the email when adding any kind of payment?!?
+    * Add plan_id to invoicing_ledger_item: optional field for tracking plans/billing periods ie may be null
   * Make use of timezone?
-  * Add payment frequence drop down (probably value == number of months)
-  * Possibly add tax rate to line_items (and present in UI)
+  * Add payment frequency drop down (probably value == number of months)
+  * Possibly add tax rate to line_items (and present in UI as the field to edit, compute on the back end)
+  * Should be able to add credit notes and/or payments to draft invoices
 
 * 2.0 (MVP, ship in January-february time frame, available to all, for money)
   * Delete invoice links (Same)
