--- a/TODO.org
+++ b/TODO.org
@@ -3,7 +3,7 @@
 * Alpha (Demoable/guided)
   * Space branding of main app - contentious
   * Invoice details page.
-  * Member portal design changes (design coming?)
+  * Member portal design changes -   (virtually a) Clone of members/show and invoices/show
 
 * Beta (5-10 early adopters)
 
@@ -28,6 +28,15 @@
 * 2.2
 
 * Backlog
+
+  * spaces/show (overview - replaces manage)
+
+  * Trial ending on space and owner (rather than current user)
+  * Only owner can update billing info (plan, payment method, etc)
+  * Must have a way to transfer ownership
+
+  * Update billing page to include details on spaces/locations used for each CC
+
   * Space Branding for member portal
   * Improve display of errors on fields for devise forms.
   * Add "due in" to issue date column on invoice list?
@@ -57,37 +66,3 @@
       * billing
       * member auth
   * API Client side (restful, ruby, golang? python?, etc?)
-
-
-
-so, my thoughts on once its sent
-label by invoice number changes to sent
-edit invoice button goes away
-more actions button goes away
-replaced by Add Credit Note
-Send invoice becomes Send Reminder? at some point
-until then, it can go away too
-so only options are add credit note and record payment
-or is there another action once its sent?
-Matt • 1 min
-yeah until paid
-no
-1 min
-Vince Hodges
-Matt Farley
-ok
-or maybe instead of removing buttons, we disable them
-Matt • 1 min
-if you prefer
-Now
-Vince Hodges
-Matt Farley
-not sure
-oh, and one more thing
-when invoice is paid
-all buttons are disabled
-record payment is removed
-Matt • Now
-ok
-Now
-Vince Hodges
