Fixed 2 bugs: 1) Don't show line items for setup and deposit if blank.  2) Allow for nil tax when setting up initial invoice for plan subscription

--- a/TODO.org
+++ b/TODO.org
@@ -27,6 +27,7 @@
 
 * Backlog
 
+  * Bug when creating invoice from plan - tax rate should not be required.
   * Possibly move subscription/plan to account - but only if we don't really have plans.
 
   * fix conditional get caching (cache busting for dev mode, add flash to cache key, version #?)
