--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,4 +20,14 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  activerecord:
+    models:
+      member_invoice: Invoice
+      member_credit_note: Credit Note
+      member_payment: Payment
+  helpers:
+    submit:
+      member_credit_note:
+        create: "Confirm Credit Note"
+      member_payment:
+        create: "Save Payment"
